# saved-posts-mcps

./: .env.reddit.example  .env.x.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
docs/: PLAN.md  TODO.md
docs/plans/: 2026-01-05-docker-mcp-scripts-design.md  2026-01-05-docker-mcp-scripts.md  2026-01-05-fuzzy-search-design.md  2026-01-05-playwright-scraper-refactor-design.md
scripts/: docker-build.sh  mcp-config.sh
src/common/: auth.py  fuzzy_search.py  models.py  playwright_scraper.py
src/reddit/: Dockerfile  client.py  scraper.py  server.py
src/x/: Dockerfile  README.md  auth.py  client.py  scraper.py  server.py  utils.py
tests/: reddit_scraper_test.py  x_scraper_test.py
